# mtg_analytics

./: .gitignore  LICENSE  pyproject.toml
src/mtg_analytics/: __init__.py  deck.py  main.py  tools.py
src/mtg_shiny/: app.py
tests/: dummy_decks.py  test_deck.py  test_general.py
