[project]
name = "mtg-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Nicholson-Shaw",email = "timnicholsonshaw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "mtg-parser (>=0.0.1a48,<0.0.2)",
    "mtgtools (>=0.9.71,<0.10.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[tool.poetry]
packages = [{include = "mtg_analytics", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
